@@ -1,62 +1,74 @@
 package domain.services;
 
-import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import domain.dto.NotificatieDTO;
 import io.github.cdimascio.dotenv.Dotenv;
 
+import java.net.URI;
+import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.util.Arrays;
 import java.util.List;
 
-public class NotificatieApiService extends ApiService {
-    private final String BASE_URL = Dotenv.load().get("BASE_URL") + "/notificaties";
+public class NotificatieApiService {
+    Dotenv dotenv = Dotenv.load();
+    private final String BASE_URL = dotenv.get("BASE_URL") + "/notificaties";
+    private final HttpClient client = HttpClient.newHttpClient();
+    private final ObjectMapper mapper = new ObjectMapper()
+            .registerModule(new JavaTimeModule());
 
     public List<NotificatieDTO> geefNotificaties(int werknemerId) {
         try {
-            HttpRequest request = authenticatedRequest(BASE_URL + "/" + werknemerId).GET().build();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(BASE_URL + "/" + werknemerId))
+                    .GET()
+                    .build();
             HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-            if (response.statusCode() != 200) return List.of();
-            String body = response.body();
-            if (body == null || body.isBlank()) return List.of();
-            return mapper.readValue(body, new TypeReference<>() {});
+            NotificatieDTO[] array = mapper.readValue(response.body(), NotificatieDTO[].class);
+            return Arrays.asList(array);
         } catch (Exception e) {
-            return List.of();
+            throw new RuntimeException("Fout bij ophalen notificaties", e);
         }
     }
 
     public long geefAantalOngelezen(int werknemerId) {
         try {
-            HttpRequest request = authenticatedRequest(BASE_URL + "/" + werknemerId + "/ongelezen").GET().build();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(BASE_URL + "/" + werknemerId + "/ongelezen"))
+                    .GET()
+                    .build();
             HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-            String body = response.body();
-            if (body == null || body.isBlank()) return 0;
-            return Long.parseLong(body.trim());
+            return Long.parseLong(response.body());
         } catch (Exception e) {
-            return 0;
+            throw new RuntimeException("Fout bij ophalen ongelezen notificaties", e);
         }
     }
 
     public String markeerAlsGelezen(int notificatieId) {
         try {
-            HttpRequest request = authenticatedRequest(BASE_URL + "/" + notificatieId + "/gelezen")
-                    .PUT(HttpRequest.BodyPublishers.noBody()).build();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(BASE_URL + "/" + notificatieId + "/gelezen"))
+                    .PUT(HttpRequest.BodyPublishers.noBody())
+                    .build();
             HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-            String body = response.body();
-            return body != null ? body : "";
+            return response.body();
         } catch (Exception e) {
-            return "";
+            throw new RuntimeException("Fout bij markeren als gelezen", e);
         }
     }
 
     public String verwijderNotificatie(int notificatieId) {
         try {
-            HttpRequest request = authenticatedRequest(BASE_URL + "/" + notificatieId)
-                    .DELETE().build();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(BASE_URL + "/" + notificatieId))
+                    .DELETE()
+                    .build();
             HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-            String body = response.body();
-            return body != null ? body : "";
+            return response.body();
         } catch (Exception e) {
-            return "";
+            throw new RuntimeException("Fout bij verwijderen notificatie", e);
         }
     }
 }
